hphp/test/slow/unsafe_cast_nullary.php.expectf
Fatal error: Call to undefined function HH\FIXME\UNSAFE_CAST() in %s/test/slow/unsafe_cast_nullary.php on line 7
